--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1104,3 +1104,19 @@ section {
     padding-right: 20px 15px;
   }
 }
+
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
